# devops-upskill-s3-app

./: .gitignore  Makefile  env.sh  pyproject.toml  requirements.txt  setup.sh
app/: __init__.py
app/main/: views.py
app/templates/: files.html  s3_form.html
conf/: upskill  upskill.service
ec2_conf/conf/: upskill
nginx/: nginx.conf
nginx_fargate/: Dockerfile  setup.sh
terraform/: main.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
