[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Patryk Lomza <p.lomza@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
boto3 = "^1.18.36"
requests = "^2.26.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
